fix modal scroll and overflow

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
   z-index: 2000;
   border: none;
   margin: 0;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   width: 100%;
 }
 
